--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "stdlib"]
 	path = modules/stdlib
 	url = https://github.com/puppetlabs/puppetlabs-stdlib.git
+[submodule "ntfs3g"]
+	path = modules/ntfs3g
+	url = git@github.com:pmods/ntfs3g
